--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
   lottie: ^2.7.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
